--- a/index.html
+++ b/index.html
@@ -1,66 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<link rel="stylesheet" href="style.css">
-		<title>МК розробка сайтів</title>
-	</head>
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Logika website testpage</title>
+</head>
+<body style="
+font-size: 24px;
+font-family: Arial, sans-serif;
+margin: 0;
+">
+	<header style="
+	background: gold;
+	color: black;
+	height: 100px;
+	padding: 20px;
+	">
+		<img src="#" alt="logo" width="30px" height="30px">
+		<a href="#">Homepage</a>
+		<a href="#">Catalog</a>
+		<a href="#">Blog</a>
+		<a href="#">Gallery</a>
+		<a href="#">Contacts</a>
+		<a href="#">About us</a>
+	</header>
 
-	<body style="background-color: lightblue;">
-		<!--коментар до цього коду-->
-		<div class="container">	
-			<h1>МК розробка сайтів</h1>
-			<img src="clipart/content.jpg" alt="">	
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut 
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-				<a href="#">посилання</a>
-				Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur tempora sit facere, optio voluptatibus recusandae quia, incidunt commodi corporis, illum aspernatur assumenda molestias et quis inventore excepturi delectus ut ad.
-			</p>
+	<main style="
+	min-height: 600px;
+	padding: 50px;">
+		<h1>My favorite website</h1>
+		<img src="https://s4.vcdn.biz/static/f/3260977051/image.jpg/pt/r0x284x4" alt="">
+		<p>
+			Lorem ipsum, dolor sit amet consectetur adipisicing, elit. Nulla, praesentium! Asperiores in, ab veritatis, sequi labore repellendus ex, nobis error aspernatur dolorem molestias quaerat excepturi obcaecati architecto quod, quis beatae?
+		</p>
 
+	</main>
 
-
-			<table>
-				<tr>
-					<td>Аватар</td>
-					<td>ПІБ</td>
-					<td>Курс</td>
-					<td>Оцінка</td>
-					<td>Нікнейм</td>
-				</tr>
-				<tr>
-					<td>
-						<img src="boy.jpg" style="width:50px;height: 50px;"/>
-					</td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-				</tr>
-				<tr>
-					<td>
-						<td img scr= "">
-					</td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-				</tr>
-			</table>
-			
-
-
-			<ul>
-				<li>Lorem ipsum, dolor sit amet consectetur, adipisicing elit.  </li>
-				<li>consequatur aliquam obcaecati consequuntur ipsum saepe .</li>
-				<li>Rerum quo eveniet nulla ab beatae officiis, quae quidem</li>
-				<li>quam vitae veritatis nesciunt? Voluptas, minima, adipisci</li>
-				<li>lorem</li>
-			</ul>
-			<p>Lorem, ipsum, dolor sit amet consectetur adipisicing elit. Sed dolore ea nesciunt ducimus dolor a id sint et quia! Eum distinctio molestiae voluptas culpa dolorem harum, eos facere mollitia, Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur veniam laborum possimus, exercitationem perspiciatis hic qui. Laudantium eum culpa reprehenderit, fuga soluta. Necessitatibus, natus odio asperiores architecto tempora rem reiciendis.
-			</p>
-	</div>
-
-	</body>
+	<footer 
+	style="
+	background: gold;
+	color: black;
+	height: 200px;
+	padding: 20px;
+	">
+		<a href="#">Homepage</a>
+		<a href="#">Catalog</a>
+		<a href="#">Blog</a>
+		<a href="#">Gallery</a>
+		<a href="#">Contacts</a>
+		<a href="#">About us</a>
+		
+		<p>Copyright 2022 Ukraine</p>
+	</footer>
+	
+</body>
 </html>
